# Multi-Maximum-Common-Subgraph

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Makefile  README  README.md  SecureQueue.h  graph.cc  graph.cpp  graph.h  graph.hh  main.cpp  mcsp  mcsp-mt.cpp  mcsp-mt.cu  mcsp.c  mcsp.cc  mcsp.cpp  mcsp.h
